+health endpoint, ~OAPI spec
